differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr47963.c-5.4.0-3.out.txt
pr47963.c: In function ‘foo’:
pr47963.c:8:7: error: size of array ‘A’ has non-integer type
   int A[n][n];  
       ^
pr47963.c:8:7: error: size of array ‘A’ has non-integer type
